# FloSystemV2_GameDemo

./: .gitignore  Dockerfile  README.MD  auto_startup_flogame_launcher.sh  dev_install.sh  docker-compose.yml  flogame.service
flo_core/: CMakeLists.txt  README.MD  package.xml  setup.py
flo_core/config/: flov2_robot_description.srdf  gazebo_flov2_robot_description.urdf  simonsays_game_params.yaml
flo_core/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  full_robot_arm_sim.launch  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simonsays_launcher_prod.launch  simonsays_launcher_test.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
flo_core/scripts/: game_runner.py  mini_game_runner_test_vision.py  moveit_controller.py  polly_tts.py  polly_tts_streaming.py  simon_says_gui.py  stub_pose_publisher.py  stub_simon_server.py
flo_core/scripts/test/: test_polly.py  test_polly_streaming.py
flo_core/src/flo_core/: action_sequence_controller.py  prompt_utils.py
flo_core/test/: simonsays_test.yaml
flo_core_defs/: CMakeLists.txt  package.xml
flo_core_defs/action/: SimonCmd.action
flo_core_defs/msg/: Emotion.msg  GameAction.msg  PoseScore.msg  SimonCmdResult.msg
flo_face/: CMakeLists.txt  package.xml
flo_face/scripts/: face_manager.py
flo_humanoid/: README.MD  package.xml
flo_vision/: CMakeLists.txt  README.MD  package.xml  setup.py
flo_vision/launch/: arm_hand_tracker_with_webcam.launch
flo_vision/scripts/: arm_hand_tracker_node.py
flo_vision/src/flo_vision/: arm_tracker_helper.py
flov2_robot_description/: CMakeLists.txt  package.xml
flov2_robot_description/launch/: gazebo_basic_sim.launch  gazebo_full_system.launch  rviz_model_viewer.launch
flov2_robot_description/urdf/: flov2_robot_description.csv  flov2_robot_description.urdf
