<?xml version="1.0"?>
<package format="2">
  <name>flo_core</name>
  <version>0.1.0</version>
  <description>Core package for the Flo humanoid system, including configuration, launch files, and scripts for simulation and control.</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>flo_core_defs</build_depend>
  <build_depend>flo_humanoid</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>flo_core_defs</exec_depend>
  <exec_depend>flo_humanoid</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>