<?xml version="1.0"?>
<package format="2">
  <name>flo_core</name>
  <version>0.1.0</version>
  <description>Core package for the Flo humanoid system, including configuration, launch files, and scripts for simulation and control.</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/moveit/moveit/issues</url>
  <url type="repository">https://github.com/moveit/moveit</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Typical build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>flo_core_defs</build_depend>
  <build_depend>flo_humanoid</build_depend>
  <!-- For moveit_commander usage at build time, typically: -->
  <build_depend>moveit_ros_planning_interface</build_depend>

  <!-- Execution dependencies (use <exec_depend>, never <run_depend>) -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>flo_core_defs</exec_depend>
  <exec_depend>flo_humanoid</exec_depend>
  <!-- For Python-based MoveIt usage (moveit_commander, etc.): -->
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <!-- Replace these old <run_depend> with <exec_depend> as well -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- If you need flov2_robot_description at runtime: -->
  <exec_depend>flov2_robot_description</exec_depend>


</package>